@@ -1,7 +1,7 @@
 1..1435
 # Running under perl version 5.008007 for linux
-# Current time local: Wed Nov  7 19:52:58 2007
-# Current time GMT:   Wed Nov  7 10:52:58 2007
+# Current time local: Thu Nov  8 09:33:11 2007
+# Current time GMT:   Thu Nov  8 00:33:11 2007
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
