@@ -1,3 +1,8 @@
+2007-11-08  Wakaba  <wakaba@suika.fam.cx>
+
+	* content-model-4.dat: s/noreferer/noreferrer/g
+	and s/noreferrer/noreferer/g (HTML5 revision 1132).
+
 2007-11-04  Wakaba  <wakaba@suika.fam.cx>
 
 	* content-model-2.dat: Tests for |manifest=""| are added.
