@@ -1,3 +1,7 @@
+2007-11-08  Wakaba  <wakaba@suika.fam.cx>
+
+	* mklinktypelist.pl: s/noreferer/noreferrer/ (HTML5 revision 1132).
+
 2007-11-04  Wakaba  <wakaba@suika.fam.cx>
 
 	* Makefile: |CacheManifest.html| is added.
